--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,15 @@ DB_PASSWORD=
 DB_PORT=
 DB_NAME=
 
+
+MAX_MONTHLY_USER=2
 TOKEN_KEY=
 TOKEN_EXPIRE=
+
+
+REDIS_ADDR=localhost
+REDIS_PASSWORD=
+REDIS_DB=
+
+
+BASE_URL=http://localhost:3000
