--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ REDIS_DB=
 
 
 BASE_URL=http://localhost:3000
+
+AWS_S3_KEY=
+AWS_S3_SECRET=
+AWS_S3_REGION=ap-southeast-1
+AWS_S3_BUCKET=
+AWS_CLOUDWATCH_GROUP=
+AWS_CLOUDWATCH_STREAM=
